--- a/common/src/main/res/values/styles.xml
+++ b/common/src/main/res/values/styles.xml
@@ -216,6 +216,14 @@
         <item name="android:textColor">@color/gray1</item>
     </style>
 
+    <style name="Widget.Nova.Counter" parent="">
+        <item name="android:paddingStart">8dp</item>
+        <item name="android:paddingTop">1.5dp</item>
+        <item name="android:paddingEnd">8dp</item>
+        <item name="android:paddingBottom">2.5dp</item>
+        <item name="android:textColor">@color/white_80</item>
+    </style>
+
     <!-- Buttons -->
 
     <!-- Input -->
