--- a/feature-assets/src/main/res/layout/view_go_to_nfts.xml
+++ b/feature-assets/src/main/res/layout/view_go_to_nfts.xml
@@ -8,6 +8,7 @@
     tools:parentTag="androidx.constraintlayout.widget.ConstraintLayout">
 
     <TextView
+        android:id="@+id/goToNftsTitle"
         style="@style/TextAppearance.NovaFoundation.Regular.SubHeadline"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -20,7 +21,63 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <io.novafoundation.nova.common.view.CounterView
+        android:id="@+id/goToNftCounter"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        app:layout_constraintBottom_toBottomOf="@+id/goToNftsTitle"
+        app:layout_constraintStart_toEndOf="@+id/goToNftsTitle"
+        app:layout_constraintTop_toTopOf="@+id/goToNftsTitle"
+        tools:text="6" />
+
+    <com.facebook.shimmer.ShimmerFrameLayout
+        android:layout_marginEnd="8dp"
+        android:id="@+id/goToNftsShimmer"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/imageView2"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <View
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:background="@drawable/bg_shimerring" />
+    </com.facebook.shimmer.ShimmerFrameLayout>
+
     <ImageView
+        android:visibility="gone"
+        android:id="@+id/goToNftPreview1"
+        tools:visibility="visible"
+        style="@style/Widget.Nova.NftPreview"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/imageView2"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:visibility="gone"
+        android:id="@+id/goToNftPreview2"
+        tools:visibility="visible"
+        style="@style/Widget.Nova.NftPreview"
+        app:layout_constraintBottom_toBottomOf="@+id/goToNftPreview1"
+        app:layout_constraintEnd_toStartOf="@+id/goToNftPreview1"
+        app:layout_constraintStart_toStartOf="@+id/goToNftPreview1"
+        app:layout_constraintTop_toTopOf="@+id/goToNftPreview1" />
+
+    <ImageView
+        android:visibility="gone"
+        tools:visibility="visible"
+        android:id="@+id/goToNftPreview3"
+        style="@style/Widget.Nova.NftPreview"
+        app:layout_constraintBottom_toBottomOf="@+id/goToNftPreview2"
+        app:layout_constraintEnd_toStartOf="@+id/goToNftPreview2"
+        app:layout_constraintStart_toStartOf="@+id/goToNftPreview2"
+        app:layout_constraintTop_toTopOf="@+id/goToNftPreview2" />
+
+    <ImageView
+        android:id="@+id/imageView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
