--- a/feature-wallet-api/src/main/res/values/attrs.xml
+++ b/feature-wallet-api/src/main/res/values/attrs.xml
@@ -11,4 +11,8 @@
     <declare-styleable name="BalancesView">
         <attr name="title" />
     </declare-styleable>
+
+    <declare-styleable name="PriceSectionView">
+        <attr name="sectionTitle" />
+    </declare-styleable>
 </resources>
