--- a/common/src/main/res/layout/view_toolbar.xml
+++ b/common/src/main/res/layout/view_toolbar.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="?attr/actionBarSize"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@android:color/black"
     android:gravity="center_vertical"
     android:id="@+id/toolbarContainer"
@@ -14,8 +15,8 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="center_vertical"
-        android:background="@drawable/bg_primary_list_item"
         android:paddingStart="16dp"
+        app:tint="@color/actions_color"
         android:paddingEnd="16dp"
         android:src="@drawable/ic_arrow_back" />
 
