--- a/feature-nft-impl/src/main/res/layout/fragment_nft_details.xml
+++ b/feature-nft-impl/src/main/res/layout/fragment_nft_details.xml
@@ -6,52 +6,32 @@
     android:layout_height="match_parent"
     tools:background="@color/black">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
-        <ImageView
-            android:id="@+id/nftDetailsBack"
-            android:layout_width="wrap_content"
+        <io.novafoundation.nova.common.view.Toolbar
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="9dp"
-            android:src="@drawable/ic_arrow_back"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:tint="@color/actions_color" />
-
-        <io.novafoundation.nova.feature_account_api.view.ChainChipView
-            android:id="@+id/nftDetailsChain"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:layout_marginEnd="16dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:dividerVisible="false" />
 
         <ImageView
             android:id="@+id/nftDetailsMedia"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="9dp"
             android:adjustViewBounds="true"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/nftDetailsBack"
             tools:src="@tools:sample/backgrounds/scenic" />
 
         <TextView
             android:id="@+id/nftDetailsTitle"
             style="@style/TextAppearance.NovaFoundation.Bold.Title1"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="20dp"
             android:layout_marginEnd="16dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/nftDetailsMedia"
             tools:text="Honeybird" />
 
         <io.novafoundation.nova.feature_nft_impl.presentation.nft.common.NftIssuanceView
@@ -60,76 +40,58 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/nftDetailsTitle"
             tools:text="#11 Edition of 9978" />
 
         <TextView
             android:id="@+id/nftDetailsDescription"
             style="@style/TextAppearance.NovaFoundation.Regular.SubHeadline"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/nftDetailsIssuance"
             tools:text="Wayne: Hello sir, what's your name and what brings you to Pastel Beach Mall?" />
-
 
         <io.novafoundation.nova.feature_wallet_api.presentation.view.PriceSectionView
             android:id="@+id/nftDetailsPrice"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="24dp"
-            android:layout_marginEnd="16dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/nftDetailsDescription" />
+            android:layout_marginEnd="16dp" />
 
-        <io.novafoundation.nova.common.view.section.TitleImageContentSectionView
-            android:id="@+id/nftDetailsCollection"
-            android:layout_width="0dp"
+        <io.novafoundation.nova.common.view.TableView
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="12dp"
             android:layout_marginEnd="16dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/nftDetailsPrice"
-            app:sectionTitle="@string/nft_collection" />
+            android:layout_marginBottom="24dp">
 
-        <io.novafoundation.nova.common.view.section.TitleImageContentSectionView
-            android:id="@+id/nftDetailsOwner"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="12dp"
-            android:layout_marginEnd="16dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/nftDetailsCollection"
-            app:sectionContentEndIcon="@drawable/ic_info_16"
-            app:sectionContentEndIconTint="@color/white_48"
-            app:sectionTitle="@string/nft_owned_by" />
+            <io.novafoundation.nova.common.view.TableCellView
+                android:layout_width="match_parent"
+                android:id="@+id/nftDetailsCollection"
+                android:layout_height="wrap_content"
+                app:title="@string/nft_collection" />
 
-        <io.novafoundation.nova.common.view.section.TitleImageContentSectionView
-            android:id="@+id/nftDetailsCreator"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="12dp"
-            android:layout_marginEnd="16dp"
-            android:layout_marginBottom="24dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/nftDetailsOwner"
-            app:sectionContentEndIcon="@drawable/ic_info_16"
-            app:sectionContentEndIconTint="@color/white_48"
-            app:sectionTitle="@string/nft_created_by" />
+            <io.novafoundation.nova.common.view.TableCellView
+                android:id="@+id/nftDetailsOnwer"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:title="@string/nft_owned_by" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            <io.novafoundation.nova.common.view.TableCellView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:primaryValueIcon="@drawable/ic_info_16"
+                android:id="@+id/nftDetailsCreator"
+                app:title="@string/nft_created_by" />
+
+            <io.novafoundation.nova.common.view.TableCellView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/nftDetailsChain"
+                app:title="@string/common_network" />
+        </io.novafoundation.nova.common.view.TableView>
+    </LinearLayout>
 </ScrollView>
