--- a/feature-wallet-api/src/main/res/layout/section_price.xml
+++ b/feature-wallet-api/src/main/res/layout/section_price.xml
@@ -17,7 +17,7 @@
         android:textColor="@color/white_64"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:text="Price" />
+        android:text="@string/common_price" />
 
     <TextView
         android:id="@+id/sectionPriceToken"
