--- a/feature-nft-impl/src/main/res/layout/item_nft.xml
+++ b/feature-nft-impl/src/main/res/layout/item_nft.xml
@@ -32,7 +32,7 @@
         <ImageView
             android:id="@+id/itemNftMedia"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="154dp"
             android:layout_marginStart="6dp"
             android:layout_marginTop="6dp"
             android:layout_marginEnd="6dp"
