--- a/common/src/main/res/layout/view_table_cell.xml
+++ b/common/src/main/res/layout/view_table_cell.xml
@@ -7,6 +7,21 @@
     tools:background="@color/black"
     tools:parentTag="androidx.constraintlayout.widget.ConstraintLayout">
 
+    <ImageView
+        android:id="@+id/tableCellImage"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:layout_marginEnd="8dp"
+        android:visibility="gone"
+        tools:visibility="visible"
+        app:layout_constraintHorizontal_bias="1"
+        app:layout_constraintStart_toEndOf="@id/tableCellTitle"
+        android:layout_marginStart="48dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/barrier"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:src="@tools:sample/avatars" />
+
     <TextView
         android:id="@+id/tableCellTitle"
         style="@style/TextAppearance.NovaFoundation.Body1"
@@ -15,30 +30,30 @@
         android:layout_marginTop="16dp"
         android:layout_marginBottom="16dp"
         android:includeFontPadding="false"
-        tools:text="Title"
         android:textColor="@color/white_64"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="Title" />
 
     <TextView
         android:id="@+id/tableCellValuePrimary"
         style="@style/TextAppearance.NovaFoundation.Body1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintHorizontal_bias="1"
-        app:layout_constrainedWidth="true"
         android:layout_marginStart="16dp"
         android:ellipsize="middle"
-        android:gravity="center_vertical"
+        android:gravity="end"
         android:includeFontPadding="false"
         android:singleLine="true"
+        app:layout_constrainedWidth="true"
         app:layout_constraintBottom_toTopOf="@id/tableCellValueSecondary"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1"
         app:layout_constraintStart_toEndOf="@id/tableCellTitle"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_chainStyle="packed"
-        tools:text="Value primary"
+        tools:text="@tools:sample/lorem[20]"
         tools:textColor="@color/white" />
 
     <TextView
@@ -47,8 +62,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:includeFontPadding="false"
-        android:visibility="gone"
         android:textColor="@color/black2"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/tableCellValuePrimary"
         app:layout_constraintTop_toBottomOf="@id/tableCellValuePrimary"
@@ -59,8 +74,8 @@
         android:layout_width="16dp"
         android:layout_height="16dp"
         android:indeterminate="true"
-        android:visibility="gone"
         android:indeterminateTint="@color/white"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -70,7 +85,7 @@
         android:layout_width="0dp"
         android:layout_height="1dp"
         android:layout_marginTop="7dp"
-        android:background="@color/white_16"
+        android:background="@color/white_8"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -80,4 +95,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:constraint_referenced_ids="tableCellValueSecondary, tableCellValuePrimary" />
+
+    <androidx.constraintlayout.widget.Barrier
+        android:id="@+id/barrier"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:barrierDirection="start"
+        app:constraint_referenced_ids="tableCellValueProgress,tableCellValuePrimary,tableCellValueSecondary" />
 </merge>
