--- a/feature-nft-impl/src/main/res/layout/fragment_nft_list.xml
+++ b/feature-nft-impl/src/main/res/layout/fragment_nft_list.xml
@@ -53,7 +53,7 @@
             android:paddingStart="16dp"
             android:paddingTop="16dp"
             android:paddingEnd="5dp"
-            app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
+            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
             app:spanCount="2"
             tools:listitem="@layout/item_nft" />
 
