--- a/feature-nft-impl/src/main/res/layout/item_nft.xml
+++ b/feature-nft-impl/src/main/res/layout/item_nft.xml
@@ -17,7 +17,7 @@
 
         <View
             android:layout_width="match_parent"
-            android:layout_height="231dp"
+            android:layout_height="262dp"
             android:background="@drawable/bg_shimerring" />
 
     </com.facebook.shimmer.ShimmerFrameLayout>
@@ -26,7 +26,7 @@
     <LinearLayout
         android:id="@+id/itemNftContent"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="262dp"
         android:orientation="vertical">
 
         <ImageView
@@ -57,6 +57,8 @@
             android:id="@+id/itemNftIssuance"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:singleLine="true"
+            android:ellipsize="end"
             android:layout_marginStart="8dp"
             android:layout_marginTop="4dp"
             android:layout_marginEnd="8dp"
@@ -81,6 +83,16 @@
             android:layout_marginBottom="12dp"
             android:gravity="center_vertical"
             android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/itemNftPricePlaceholder"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                style="@style/TextAppearance.NovaFoundation.SemiBold.Footnote"
+                android:textColor="@color/white_48"
+                android:visibility="gone"
+                tools:visibility="visible"
+                android:text="@string/nft_price_not_listed" />
 
             <TextView
                 android:id="@+id/itemNftPriceToken"
